--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
+    "react-tabs": "^2.2.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.11.0",
     "webpack-cli": "^3.0.2",
