--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
+    "react-svg-piechart": "^2.1.0",
     "react-tabs": "^2.2.2",
+    "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.11.0",
     "webpack-cli": "^3.0.2",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "node-sass": "^4.9.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   }
